2005-12-17 00:34  Andrej Kacian <andrej@kacian.sk>
	* src/feed.c, src/feed.h: Do not allow subscribing to a feed more than once.

2005-12-15 22:01  Andrej Kacian <andrej@kacian.sk>
	* src, po, configure.ac, Makefile.am: Added gettext support

2005-12-15 11:35  Paul Mangan <claws@thewildbeast.co.uk>
	* src, configure.ac: add plugin_version()

2005-12-13 21:59  Andrej Kacian <andrej@kacian.sk>
	* src: More leak fixes by Colin.
	* configure.ac: Add more header checks. Patch by Paul Mangan.

2005-12-12 14:29  Andrej Kacian <andrej@kacian.sk>
	* src: Fix many memory leaks. Thanks to Colin for the patch.

2005-12-08 10:03  Andrej Kacian <andrej@kacian.sk>
	* src/feed.c: Do not use linebreaks for STATUSBAR_PUSH(). Patch by Fabien
		Vantard <fzzzzz at gmail.com>.

2005-12-07 19:25  Colin Leroy <colin@colino.net>
	* src/rssyl.c: Add plugin_licence()

2005-12-04 15:24  Colin Leroy <colin@colino.net>
	* src/feed.c: Make sure template is opened in rssyl_fetch_feed_threaded,
		set ctx->ready to TRUE before returning on error, and check
		template isn't NULL in caller. Maybe fixes bug #864.

2005-12-03 19:46  Andrej Kacian <andrej@kacian.sk>
	* configure.ac: Get search curl headers where curl-config tells us.
	* src/rssyl.c: Make sure our rcdir is always there.

2005-12-03 13:51  Andrej Kacian <andrej@kacian.sk>
	* src: Moved rssyl_parse_*() functions to a separate file.

2005-12-03 13:51  Andrej Kacian <andrej@kacian.sk>
	* src/feed.c: fix logic and possible segfault in link handling in
		rssyl_parse_atom()

2005-12-03 06:16  Andrej Kacian <andrej@kacian.sk>
	* src/feed.c, src/rssyl.c: use sylpheed's make_dir() instead of mkdir(). Use
		glib's g_file_test() instead of opendir() to check if the dir exists.
	* configure.ac: Bumped version to 0.2

2005-12-01 17:44  Andrej Kacian <andrej@kacian.sk>
	* src: Three patches by Colin Leroy: fix expired items number GUI after
		restart, fix a memory leak in rssyl_parse_rss, Atom feed parser.
