@@ -5,7 +5,7 @@ AM_MAINTAINER_MODE
 
 AC_CONFIG_HEADERS(config.h)
 
-PLUGINVERSION=0.3pre6
+PLUGINVERSION=0.3
 AM_INIT_AUTOMAKE(rssyl, $PLUGINVERSION, no-define)
 AC_SUBST(PLUGINVERSION)
 
