@@ -1,3 +1,6 @@
+2005-12-17 19:08  Andrej Kacian <andrej@kacian.sk>
+	* finished Slovak translation
+
 2005-12-17 00:44  Andrej Kacian <andrej@kacian.sk>
 	* removed remove-potcdate.{sed,sin}
 
