@@ -1,3 +1,7 @@
+2005-12-17 19:08  Andrej Kacian <andrej@kacian.sk>
+	* src: Updated some UI strings, changed code a bit, so the popup menu labels
+		can take advantage of the translation.
+
 2005-12-17 00:34  Andrej Kacian <andrej@kacian.sk>
 	* src/feed.c, src/feed.h: Do not allow subscribing to a feed more than once.
 
